# llm-wiki-pi-agent

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
PolarisKB/: CLAUDE.md
PolarisKB/raw/: 项目对比-Polaris-vs-LLMWiki.md
PolarisKB/wiki/: karpathy-wiki方法论.md  sandbox-image.md  wiki-knowledge-base.md
docs/: macos.md
docs/planning/: README.md
scripts/: recolor-icon.mjs
src/: App.vue  style.css  tauri.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/polaris-core/: Cargo.toml
src-tauri/crates/polaris-sandbox/: Cargo.toml
src-tauri/crates/polaris-sandbox/src/: commands.rs
src-tauri/crates/polaris-sandbox/src/templates/: Dockerfile.sandbox
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  claude_md.rs  conv.rs  convert.rs  doctor.rs  kb.rs  lib.rs  main.rs  provider.rs  skills.rs
src-tauri/src/templates/skills/: cloak-browser.md  image-gen.md  pptx.md
src/components/: AddProviderModal.vue  Automation.vue  ChatPanel.vue  ClaudeMdPanel.vue  EnvDoctor.vue  KnowledgeGraph.vue  Onboarding.vue  ProviderDock.vue  RightDrawer.vue  Settings.vue  Sidebar.vue  SkillCenter.vue  SplashScreen.vue  UpdatePanel.vue  UsageBoard.vue  WikiBrowse.vue
src/composables/: useFileDrop.ts  useUpdater.ts
src/features/sandbox/components/: SandboxStatus.vue
src/stores/: app.ts  artifacts.ts  automation.ts  chat.ts  providers.ts  workflows.ts
